<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="gender">Gender</string>
    <string name="hobi3">Hobi</string>
    <string name="name">Name</string>
    <string name="gender1">PRIA</string>
    <string name="gender2">WANITA</string>
    <string name="hobi3_1">OlahRaga</string>
    <string name="hobi3_2">Jalan - jalan</string>
    <string name="hobi3_3">Makan</string>
    <string name="hobi3_4">Belajar</string>
    <string name="UI">UI Component</string>
    <string name="content_description_plus_button">Submit</string>
    <string name="content_description_x_button">Reset</string>
    <string name="string_submit">Berhasil disimpan</string>
    <string name="string_reset">Data telah direset</string>
    <string name="Produktiv">ProDuktiv</string>
    <string name="Profil">Profil</string>
    <string name="profilText">Perbaharui Foto, nama dan informasi lainnya</string>
    <string name="dataMaba">Data Mahasiswa</string>
    <string name="app_name">pert4</string>
    <string name="colon">:</string>
    <string name="submit">submit</string>
    <string name="popup_message">Informasi berhasil disimpan</string>
    <string name="submit_imgBtn">Submit</string>
    <string name="reset_imgBtn">Reset</string>
    <string name="todo">Todo List</string>
    <string name="todoTxt">Tulis jadwal rencana kegiatan anda</string>
    <string name="simpan">Simpan</string>
    <string name="indoor">Dalam ruangan</string>
    <string name="outdoor">Luar ruangan</string>
    <string name="stud_ID">NIM</string>
    <string name="major">Jurusan</string>
    <string name="hobby">Hobi</string>
    <string name="activity">Nama kegiatan</string>
    <string name="actType">Jenis kegiatan</string>
    <string name="actPlace">Tempat kegiatan</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>

</resources>