<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".toDoList">
    <include layout="@layout/activity_bar_atas">

    </include>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50sp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            tools:ignore="InefficientWeight">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="140sp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/paragraph1"
                    android:elegantTextHeight="true"
                    android:textStyle="bold"
                    android:text="@string/activity">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/header2"
                    android:elegantTextHeight="true"
                    android:text="@string/colon">
                </TextView>
                <EditText
                    android:id="@+id/inputActName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="Please insert your name"
                    android:inputType="text"
                    android:labelFor="@+id/inputName"
                    tools:ignore="SpeakableTextPresentCheck">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="140sp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/paragraph1"
                    android:elegantTextHeight="true"
                    android:textStyle="bold"
                    android:text="@string/actPlace">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/header2"
                    android:text="@string/colon">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:ignore="InefficientWeight">
                    <RadioGroup
                        android:id="@+id/inputRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioOutdoor"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/outdoor"
                            tools:ignore="TouchTargetSizeCheck">
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/radioIndoor"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/indoor"
                            tools:ignore="TouchTargetSizeCheck">
                        </RadioButton>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20sp">
                <TextView
                    android:layout_width="140sp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/paragraph1"
                    android:elegantTextHeight="true"
                    android:textStyle="bold"
                    android:text="@string/actType">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/header2"
                    android:text="@string/colon">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:ignore="InefficientWeight">
                    <CheckBox
                        android:id="@+id/sport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hobi3_1">
                    </CheckBox>
                    <CheckBox
                        android:id="@+id/walk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hobi3_2">
                    </CheckBox>
                    <CheckBox
                        android:id="@+id/eat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hobi3_3">
                    </CheckBox>
                    <CheckBox
                        android:id="@+id/study"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hobi3_4">
                    </CheckBox>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="InefficientWeight">


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/green1"
            android:textSize="@dimen/paragraph1"
            android:text="@string/submit">
        </Button>
    </LinearLayout>
</LinearLayout>