<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_soil"
    tools:context=".kuisActivity">
    <include layout = "@layout/activity_bar_atas">

    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal"
            android:background="@drawable/header">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gotoProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/brown_soil2"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Profil"
                    android:textSize="@dimen/header2"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profilText"
                    android:textSize="@dimen/paragraph2">
                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:background="@drawable/user4">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gotoToDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="@color/brown_soil2"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo"
                    android:textSize="@dimen/header2"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todoTxt"
                    android:textSize="@dimen/paragraph2">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:background="@drawable/menu1">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>